<resources>
    <string name="appName">Bluecrest</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="welcomeText">Login to explore and manage !</string>
    <string name="staff">Staff</string>
    <string name="guest">Guest</string>
    <string name="firstName">First Name</string>
    <string name="firstNameRequired">First Name <font color="#FF0000">*</font></string>
    <string name="lastName">Last Name</string>
    <string name="lastNameRequired">Last Name <font color="#FF0000">*</font></string>
    <string name="username">Username</string>
    <string name="usernameRequired">Username <font color="#FF0000">*</font></string>
    <string name="password">Password</string>
    <string name="passwordRequired">Password <font color="#FF0000">*</font></string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirmPasswordRequired">Confirm Password <font color="#FF0000">*</font></string>
    <string name="emailAddress">Email Address</string>
    <string name="emailAddressRequired">Email Address <font color="#FF0000">*</font></string>
    <string name="contactNumber">Contact Number</string>
    <string name="contactNumberRequired">Contact Number <font color="#FF0000">*</font></string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccount">Create Account</string>
    <string name="createAccountText">Join us to explore and manage !</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>

    <string name="chooseProfileTitle">Choose your Profile Picture</string>
    <string name="chooseProfileSubtitle">Select an avatar or upload your own photo.</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="preview">Preview</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>

    <string name="menu">Menu</string>
    <string name="currentMenu">Current Menu</string>
    <string name="foodMenu">Food Menu</string>
    <string name="appetizers">Appetizers</string>
    <string name="mainCourses">Main Courses</string>
    <string name="desserts">Desserts</string>
    <string name="drinksMenu">Drinks Menu</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="cocktails">Cocktails</string>
    <string name="reservations">Reservations</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="markAllAsRead">Mark all as read</string>
    <string name="allCaughtUp">All caught up!</string>
    <string name="noNewNotification">You have no new notifications.</string>

    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="accountSectionText">View and edit your profile</string>
    <string name="staffManagement">Staff Management</string>
    <string name="addStaffAccount">Add Staff Account</string>
    <string name="notificationPreferences">Notification Preferences</string>
    <string name="newReservation">New Reservation</string>
    <string name="reservationChanges">Reservation Changes</string>
    <string name="reservationCancellation">Reservation Cancellation</string>

    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="addItem">Add Item</string>
    <string name="addMenuItem">Add Menu Item</string>
    <string name="itemName">Item Name</string>
    <string name="itemNameRequired">Item Name <font color="#FF0000">*</font></string>
    <string name="description">Description</string>
    <string name="descriptionRequired">Description <font color="#FF0000">*</font></string>
    <string name="price">Price (RM)</string>
    <string name="priceRequired">Price (RM) <font color="#FF0000">*</font></string>
    <string name="category">Category</string>
    <string name="categoryRequired">Category <font color="#FF0000">*</font></string>
    <string name="image">Image</string>
    <string name="icon">Icon</string>
    <string name="itemNameSample">e.g. Tiramisu</string>
    <string name="priceSample">e.g. 24</string>
    <string name="descriptionSample">e.g. Classic Italian dessert with mascarpone, coffee, and cocoa.</string>
    <string name="uploadText">Upload a file or drag and drop</string>
    <string name="uploadSubtext">PNG, JPG, GIF up to 10MB</string>

    <string name="myReservations">My Reservations</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="bookAgain">Book Again</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="back">Back</string>
    <string name="makeNewReservation">Make New Reservation</string>
    <string name="makeAReservation">Make A Reservation</string>
    <string name="date">Date</string>
    <string name="dateRequired">Date <font color="#FF0000">*</font></string>
    <string name="time">Time</string>
    <string name="timeRequired">Time <font color="#FF0000">*</font></string>
    <string name="numberOfGuests">Number of Guests</string>
    <string name="numberOfGuestsRequired">Number of Guests <font color="#FF0000">*</font></string>
    <string name="selectTable">Select Your Table</string>
    <string name="selectTableRequired">Select Your Table <font color="#FF0000">*</font></string>
    <string name="specialRequests">Special Requests (Optional)</string>
    <string name="editReservation">Edit Reservation</string>
    <string name="cancelReservation">Cancel Reservation</string>
    <string name="saveChanges">Save</string>
    <string name="noReservation">No Reservation</string>
    <string name="noUpcoming">No upcoming reservations!</string>
    <string name="noUpcomingSubtext">Looks like your calendar is clear.</string>
    <string name="yes">Yes</string>
    <string name="counter">Counter</string>
    <string name="kitchen">Kitchen</string>
    <string name="bar">Bar</string>
    <string name="T1">T1</string>
    <string name="T2">T2</string>
    <string name="T3">T3</string>
    <string name="T4">T4</string>
    <string name="T5">T5</string>
    <string name="T6">T6</string>
    <string name="T7">T7</string>
    <string name="T8">T8</string>
    <string name="T9">T9</string>
    <string name="T10">T10</string>
    <string name="T11">T11</string>
    <string name="T12">T12</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
    <string name="selected">Selected</string>
    <string name="specialRequestHint">e.g. Anniversary, dietary restrictions</string>

    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changePhoto">Change Photo</string>
    <string name="togglePassword">Toggle Password</string>

    <string-array name="food_types">
        <item>Appetizer</item>
        <item>Main Course</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="drink_types">
        <item>Coffee</item>
        <item>Tea</item>
        <item>Cocktail</item>
    </string-array>




</resources>