<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".StaffMenuItemFormActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMenuItem"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:showDividers="none">

            <LinearLayout
                android:id="@+id/itemNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/itemNameRequired"
                    android:textSize="16sp"
                    android:textColor="@color/my_primary"
                    android:layout_marginBottom="4dp" />

                <EditText
                    android:id="@+id/itemNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="Enter item name"
                    android:background="@drawable/input_bg"
                    android:drawablePadding="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:inputType="text"
                    android:hint="@string/itemNameSample"
                    android:gravity="center_vertical"
                    android:drawableTint="@color/my_primary"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/priceField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priceRequired"
                    android:textSize="16sp"
                    android:textColor="@color/my_primary"
                    android:layout_marginBottom="4dp" />

                <EditText
                    android:id="@+id/priceInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="Enter price"
                    android:background="@drawable/input_bg"
                    android:drawablePadding="8dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:inputType="numberDecimal"
                    android:hint="@string/priceSample"
                    android:gravity="center_vertical"
                    android:drawableTint="@color/my_primary"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categoryField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoryRequired"
                    android:textSize="16sp"
                    android:textColor="@color/my_primary"
                    android:layout_marginBottom="4dp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/input_bg"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:spinnerMode="dropdown"
                    android:popupBackground="@color/white"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/descriptionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionRequired"
                    android:textSize="16sp"
                    android:textColor="@color/my_primary"
                    android:layout_marginBottom="4dp" />

                <EditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:autofillHints="Enter description"
                    android:background="@drawable/input_bg"
                    android:drawablePadding="8dp"
                    android:paddingVertical="10dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:inputType="textMultiLine"
                    android:hint="@string/descriptionSample"
                    android:gravity="top"
                    android:drawableTint="@color/my_primary"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imageField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image"
                    android:textSize="16sp"
                    android:textColor="@color/my_primary"
                    android:layout_marginBottom="4dp" />

                <!-- Upload Box -->
                <LinearLayout
                    android:id="@+id/uploadContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/dashed_border_bg"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/uploadedImage"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:contentDescription="@string/image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_image" />

                    <TextView
                        android:id="@+id/uploadHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uploadText"
                        android:textColor="@color/gray"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/uploadFormat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uploadSubtext"
                        android:textColor="@color/gray"
                        android:textSize="12sp"
                        android:layout_marginTop="4dp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/my_primary"
            android:textStyle="bold"
            android:backgroundTint="@color/my_tertiary"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/saveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/saveChanges"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/my_primary"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
