<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".StaffMenuActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tabs -->
    <LinearLayout
        android:id="@+id/menuTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_gray"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/header">

        <!-- Food -->
        <LinearLayout
            android:id="@+id/foodTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/foodMenuTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodMenu"
                android:textSize="16sp"
                android:textColor="@color/my_primary"
                android:paddingVertical="12dp"/>

            <View
                android:id="@+id/foodUnderline"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/my_primary"
                android:visibility="gone" />
        </LinearLayout>

        <!-- Drinks -->
        <LinearLayout
            android:id="@+id/drinkTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/drinksMenuTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinksMenu"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:paddingVertical="12dp"/>

            <View
                android:id="@+id/drinkUnderline"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/my_primary"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/menuTabs"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bottomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addItem"
        android:backgroundTint="@color/my_primary"
        android:textColor="@android:color/white"
        android:layout_margin="16dp"
        android:drawablePadding="8dp"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bottom Navigation -->
    <include
        android:id="@+id/bottomNav"
        layout="@layout/layout_bottom_nav"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
